# swagger.yml
@@ -7,31 +7,32 @@ info:
 schemes:
   - http
 paths:
-  /events:
+  /calls:
+    get:
+      operationId: listCall
     post:
-      operationId: createEvent
+      operationId: createCall
       parameters:
         - name: body
           in: body
           schema:
             properties:
-              name:
-                type: string
               timeStart:
                 type: string
-              timeFinish:
-                  type: string
+              description:
+                type: string
+              address:
+                type: string
+            required: [ timeStart, description, address ]
       responses:
         200:
           description: OK
           schema:
             type: string
         400:
-          description: BadRequest
-        404:
-          description: NotFound
+          description: Bad request
         500:
-          description: UnknownError
+          description: Unknown error
   /crews:
     get:
       operationId: listCrew
@@ -48,7 +49,7 @@ paths:
           default: 0
       responses:
         200:
-          description: вввв
+          description: OK
           schema:
             type: array
             items:
@@ -82,7 +83,12 @@ paths:
                 format: uint64
               comment:
                 type: string
-            required: [ timeStart, leader ]
+              roster:
+                type: array
+                items:
+                  type: integer
+                  format: uint64
+            required: [ timeStart, leader, roster ]
       responses:
         200:
           description: OK
@@ -98,7 +104,8 @@ paths:
       parameters:
         - name: id
           in: path
-          type: string
+          type: integer
+          format: uint64
           required: true
       responses:
           200:
@@ -207,11 +214,41 @@ paths:
       parameters:
         - name: id
           in: path
-          type: string
+          type: integer
+          format: uint64
           required: true
       responses:
         200:
-          description: dddd
+          description: OK
+          schema:
+            properties:
+              id:
+                type: integer
+                format: uint64
+              name:
+                type: string
+                maxLength: 255
+              phone:
+                type: string
+                maxLength: 11
+              surname:
+                type: string
+                maxLength: 255
+              patronymic:
+                type: string
+                maxLength: 255
+              nick:
+                type: string
+                maxLength: 255
+              vk:
+                type: string
+                maxLength: 255
+              tg:
+                type: string
+                maxLength: 255
+              email:
+                type: string
+                maxLength: 255
     post:
       operationId: updateUser
       parameters:
